<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginBottom="1dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_margin="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:text="@string/view"
        app:layout_constraintTop_toBottomOf="@+id/name_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEdit">

    </Button>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:text="@string/edit"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="32dp"
        app:layout_constraintTop_toBottomOf="@+id/name_textview"
        app:layout_constraintStart_toEndOf="@id/btnView"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"></Button>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:text="@string/delete"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toBottomOf="@+id/name_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEdit"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>