<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_details">

    <TextView
        android:id="@+id/textview_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_date"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:padding="8dp"
        android:textSize="24sp"
        android:textStyle="bold">
    </TextView>
    <LinearLayout
        android:id="@+id/layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_Name"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textview_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_weight="2"
        android:text="@string/date"
        android:textSize="18sp"
        android:textAlignment="textEnd">
    </TextView>
    <EditText
        android:id="@+id/edittext_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:inputType="date">
    </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_sabaq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_date"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textview_sabaq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_weight="2"
        android:text="@string/sabaq"
        android:textSize="18sp"
        android:textAlignment="textEnd">
    </TextView>
    <EditText
        android:id="@+id/edittext_sabaq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:inputType="number">
    </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_sabqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_sabaq"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textview_sabqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_weight="2"
        android:text="@string/sabqi"
        android:textSize="18sp"
        android:textAlignment="textEnd">
    </TextView>
    <EditText
        android:id="@+id/edittext_sabqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:inputType="number">
    </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_manzil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_sabqi"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textview_manzil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_weight="2"
        android:text="@string/manzil"
        android:textSize="18sp"
        android:textAlignment="textEnd">
    </TextView>
    <EditText
        android:id="@+id/edittext_manzil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:inputType="number">
    </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_manzil"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>